Update page title to reflect festival map

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Möteskartan | Visit Västerås</title>
+    <title>Festivalkartan | Västerås Cityfestival</title>
     <meta
       name="description"
       content="Möteskartan hjälper dig att hitta din nästa mötesplats. Planering och förarbete ger lyckat möte! Vare sig ni planerar en stor kongress, ett möte eller en konferens så har Västerås allt ni behöver."
